--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "appointment-system",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -18,5 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "nodemon": "^3.1.4"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
